# toy_rpc

./: CMakeLists.txt
example/: friend.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
lib/include/: rpcconfig.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cpp  rpcapplication.cpp  rpcchannel.cpp  rpcconfig.cpp  rpccontroller.cpp  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.h  logger.h  rpcapplication.h  rpcchannel.h  rpccontroller.h
test/protobuf/: main.cpp
